--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -679,33 +679,38 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:16.1}{}
 \begin{solution}{{16.1}}
-  \autocite{mukherjee2017proof}
+ Ind, Rot, Rot + Ind
 \end{solution}
 \protect \hypertarget {soln:16.2}{}
 \begin{solution}{{16.2}}
+  Чтобы сохранялись длины векторов и углы между векторами,
+  должно сохраняться скалярное произведение. Значит $\langle Vx, Vy \rangle = \langle x, y \rangle$.
+
+  Или $x'V'Vy=x'y$. Необходимо и достаточно, чтобы $V'V=I$.
 \end{solution}
 \protect \hypertarget {soln:16.3}{}
 \begin{solution}{{16.3}}
+  \autocite{mukherjee2017proof}
 \end{solution}
 \protect \hypertarget {soln:16.4}{}
 \begin{solution}{{16.4}}
-  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
-  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:16.5}{}
 \begin{solution}{{16.5}}
 \end{solution}
 \protect \hypertarget {soln:16.6}{}
 \begin{solution}{{16.6}}
-  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
-  В среднем Машка не становиться ни грустней, ни улыбчивей
-  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
+  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
+  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:16.7}{}
 \begin{solution}{{16.7}}
 \end{solution}
 \protect \hypertarget {soln:16.8}{}
 \begin{solution}{{16.8}}
+  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
+  В среднем Машка не становиться ни грустней, ни улыбчивей
+  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{solution}
 \protect \hypertarget {soln:16.9}{}
 \begin{solution}{{16.9}}
@@ -715,10 +720,84 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:16.11}{}
 \begin{solution}{{16.11}}
+\end{solution}
+\protect \hypertarget {soln:16.12}{}
+\begin{solution}{{16.12}}
+\end{solution}
+\protect \hypertarget {soln:16.13}{}
+\begin{solution}{{16.13}}
 $Y \sim \cN(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
 \end{solution}
 \protect \hypertarget {soln:17.1}{}
 \begin{solution}{{17.1}}
+
+\end{solution}
+\protect \hypertarget {soln:17.2}{}
+\begin{solution}{{17.2}}
+\end{solution}
+\protect \hypertarget {soln:17.3}{}
+\begin{solution}{{17.3}}
+\end{solution}
+\protect \hypertarget {soln:17.4}{}
+\begin{solution}{{17.4}}
+\end{solution}
+\protect \hypertarget {soln:17.5}{}
+\begin{solution}{{17.5}}
+Корреляционная матрица должна быть положительно определена. Получаем квадратное неравенство.
+\end{solution}
+\protect \hypertarget {soln:17.6}{}
+\begin{solution}{{17.6}}
+\end{solution}
+\protect \hypertarget {soln:17.7}{}
+\begin{solution}{{17.7}}
+По определению ковариационной матрицы:
+
+$\Var (\xi) =  \begin{pmatrix}
+\Var (\xi_1) & \Cov (\xi_1, \xi_2) & \Cov (\xi_1, \xi_3) \\
+\Cov (\xi_2, \xi_1) & \Var (\xi_2) & \Cov (\xi_2, \xi_3) \\
+\Cov (\xi_3, \xi_1) & \Cov (\xi_3, \xi_2) & \Var (\xi_3) \\
+\end{pmatrix}  =  \begin{pmatrix}
+2 & 1 & -1 \\
+1 & 3 & 0 \\
+-1 & 0 & 4 \\
+\end{pmatrix} $
+
+\begin{multline*}
+\Var (\xi_1 + \xi_2 + \xi_3)  = \Var   \begin{pmatrix}
+ \begin{pmatrix}
+1 & 1 & 1 \\
+\end{pmatrix}  &  \begin{pmatrix}
+\xi_1 \\
+\xi_2 \\
+\xi_3 \\
+\end{pmatrix}
+\end{pmatrix}  = \\
+\begin{pmatrix}
+1 & 1 & 1 \\
+\end{pmatrix}  \Var   \begin{pmatrix}
+\xi_1 \\
+\xi_2 \\
+\xi_3 \\
+\end{pmatrix}   \begin{pmatrix}
+1 \\
+1 \\
+1 \\
+\end{pmatrix}  = \\
+ \begin{pmatrix}
+1 & 1 & 1 \\
+\end{pmatrix}   \begin{pmatrix}
+2 & 1 & -1 \\
+1 & 3 & 0 \\
+-1 & 0 & 4 \\
+\end{pmatrix}   \begin{pmatrix}
+1 \\
+1 \\
+1 \\
+\end{pmatrix}  = 9
+\end{multline*}
+\end{solution}
+\protect \hypertarget {soln:18.1}{}
+\begin{solution}{{18.1}}
 Обозначим искомую вероятность быть в Неведении в момент $t$ значком $p_t$.
 \[
 p_{t+\Delta} = p_t (1-\lambda\Delta - o(\Delta))
@@ -736,8 +815,8 @@ p_{t+\Delta} = p_t (1-\lambda\Delta - o(\Delta))
 p_t = \exp(-\lambda t)
 \]
 \end{solution}
-\protect \hypertarget {soln:17.2}{}
-\begin{solution}{{17.2}}
+\protect \hypertarget {soln:18.2}{}
+\begin{solution}{{18.2}}
 Уже для двух перескоков вероятность не превосходит $(\lambda\Delta + o(\Delta))^2 = o(\Delta)$.
 Даже если сложить вероятности от двух перескоков до бесконечности,
 мы получаем сумму равную $o(\Delta)$.
@@ -755,8 +834,8 @@ p_{t+\Delta} = p_t(1-\lambda\Delta - o(\Delta)) + (1-p_t)(\lambda\Delta + o(\Del
 \]
 Для начального условия $p_0=1$ получаем решение $p_t = 0.5 + 0.5 \exp(-2\lambda t)$.
 \end{solution}
-\protect \hypertarget {soln:17.3}{}
-\begin{solution}{{17.3}}
+\protect \hypertarget {soln:18.3}{}
+\begin{solution}{{18.3}}
 В равновесии выполнено соотношение
 \[
 p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
@@ -767,8 +846,8 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
 Исходя из условия $\sum_k p_k = 1$ находим $p_0$.
 
 \end{solution}
-\protect \hypertarget {soln:17.4}{}
-\begin{solution}{{17.4}}
+\protect \hypertarget {soln:18.4}{}
+\begin{solution}{{18.4}}
   При $k\geq 1$ получаем уравнение
   \[
      \P(L_{t+\Delta} = k) = \lambda_{in}\Delta \P(L_t = k-1) + \lambda_s \Delta \P(L_t = k + 1) + (1-\lambda_s \Delta - \lambda_{in}\Delta) \P(L_t = k) = o(\Delta)
@@ -797,8 +876,8 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
 
   Заметим, что если $\lambda_s \approx \lambda_{in}$, длина очереди будет просто огромной!
 \end{solution}
-\protect \hypertarget {soln:17.5}{}
-\begin{solution}{{17.5}}
+\protect \hypertarget {soln:18.5}{}
+\begin{solution}{{18.5}}
   Например, для $Y_4$:
   \[
     \P(Y_4 \in [t; t+\Delta]) = C_{10}^1 \cdot \Delta \cdot C_{9}^3 t^3 (1-t)^6 + o(\Delta)
@@ -812,97 +891,97 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
   \end{enumerate}
   Вероятностью попадания двух и более величин в отрезок длины $\Delta$ пренебрегаем!
 \end{solution}
-\protect \hypertarget {soln:17.6}{}
-\begin{solution}{{17.6}}
-\end{solution}
-\protect \hypertarget {soln:18.1}{}
-\begin{solution}{{18.1}}
-\end{solution}
-\protect \hypertarget {soln:18.2}{}
-\begin{solution}{{18.2}}
-\end{solution}
-\protect \hypertarget {soln:18.3}{}
-\begin{solution}{{18.3}}
-Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
-\end{solution}
-\protect \hypertarget {soln:18.4}{}
-\begin{solution}{{18.4}}
-\end{solution}
-\protect \hypertarget {soln:18.5}{}
-\begin{solution}{{18.5}}
+\protect \hypertarget {soln:18.6}{}
+\begin{solution}{{18.6}}
 \end{solution}
 \protect \hypertarget {soln:19.1}{}
 \begin{solution}{{19.1}}
-Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
 \end{solution}
 \protect \hypertarget {soln:19.2}{}
 \begin{solution}{{19.2}}
-Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
 \end{solution}
 \protect \hypertarget {soln:19.3}{}
 \begin{solution}{{19.3}}
-  да
+Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
 \end{solution}
 \protect \hypertarget {soln:19.4}{}
 \begin{solution}{{19.4}}
-да
 \end{solution}
 \protect \hypertarget {soln:19.5}{}
 \begin{solution}{{19.5}}
 \end{solution}
-\protect \hypertarget {soln:19.6}{}
-\begin{solution}{{19.6}}
+\protect \hypertarget {soln:20.1}{}
+\begin{solution}{{20.1}}
+Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
+\end{solution}
+\protect \hypertarget {soln:20.2}{}
+\begin{solution}{{20.2}}
+Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
+\end{solution}
+\protect \hypertarget {soln:20.3}{}
+\begin{solution}{{20.3}}
+  да
+\end{solution}
+\protect \hypertarget {soln:20.4}{}
+\begin{solution}{{20.4}}
+да
+\end{solution}
+\protect \hypertarget {soln:20.5}{}
+\begin{solution}{{20.5}}
+\end{solution}
+\protect \hypertarget {soln:20.6}{}
+\begin{solution}{{20.6}}
   два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
 \end{solution}
-\protect \hypertarget {soln:19.7}{}
-\begin{solution}{{19.7}}
+\protect \hypertarget {soln:20.7}{}
+\begin{solution}{{20.7}}
   Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
 \end{solution}
-\protect \hypertarget {soln:19.8}{}
-\begin{solution}{{19.8}}
+\protect \hypertarget {soln:20.8}{}
+\begin{solution}{{20.8}}
   укреплять те места, где не было следов пуль
 \end{solution}
-\protect \hypertarget {soln:19.9}{}
-\begin{solution}{{19.9}}
+\protect \hypertarget {soln:20.9}{}
+\begin{solution}{{20.9}}
 \end{solution}
-\protect \hypertarget {soln:19.10}{}
-\begin{solution}{{19.10}}
+\protect \hypertarget {soln:20.10}{}
+\begin{solution}{{20.10}}
 \end{solution}
-\protect \hypertarget {soln:19.11}{}
-\begin{solution}{{19.11}}
+\protect \hypertarget {soln:20.11}{}
+\begin{solution}{{20.11}}
 \begin{enumerate}
 \item $\E(\bar{X}_n) = \mu$, $\Var(\bar{X}_n) = \frac{\sigma^2}{n}$
 \item $\E(\bar{X}_n) = \mu$, $\Var(\bar{X}_n) = \frac{\sigma^2}{n} \cdot \frac{N-n}{N-1}$
 \item При $N\to \infty$ получится формула для выборки с возвращениями.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:19.12}{}
-\begin{solution}{{19.12}}
+\protect \hypertarget {soln:20.12}{}
+\begin{solution}{{20.12}}
 \end{solution}
-\protect \hypertarget {soln:19.13}{}
-\begin{solution}{{19.13}}
+\protect \hypertarget {soln:20.13}{}
+\begin{solution}{{20.13}}
 \end{solution}
-\protect \hypertarget {soln:19.14}{}
-\begin{solution}{{19.14}}
+\protect \hypertarget {soln:20.14}{}
+\begin{solution}{{20.14}}
   $m^2=1/2$, $\Med(X) = 1/\sqrt{2}$.
-\end{solution}
-\protect \hypertarget {soln:20.1}{}
-\begin{solution}{{20.1}}
-\end{solution}
-\protect \hypertarget {soln:20.2}{}
-\begin{solution}{{20.2}}
-\end{solution}
-\protect \hypertarget {soln:20.3}{}
-\begin{solution}{{20.3}}
-\end{solution}
-\protect \hypertarget {soln:20.4}{}
-\begin{solution}{{20.4}}
-\end{solution}
-\protect \hypertarget {soln:20.5}{}
-\begin{solution}{{20.5}}
 \end{solution}
 \protect \hypertarget {soln:21.1}{}
 \begin{solution}{{21.1}}
+\end{solution}
+\protect \hypertarget {soln:21.2}{}
+\begin{solution}{{21.2}}
+\end{solution}
+\protect \hypertarget {soln:21.3}{}
+\begin{solution}{{21.3}}
+\end{solution}
+\protect \hypertarget {soln:21.4}{}
+\begin{solution}{{21.4}}
+\end{solution}
+\protect \hypertarget {soln:21.5}{}
+\begin{solution}{{21.5}}
+\end{solution}
+\protect \hypertarget {soln:22.1}{}
+\begin{solution}{{22.1}}
 Здесь потребуется формула для $S=1^2+2^2 + \ldots + n^2$.
 
 На рисунке сложены три суммы:
@@ -916,15 +995,15 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
   3S = (2n+1) \cdot (1 + 2 + \ldots + n) = (2n+1)n\frac{n+1}{2}.
 \]
 \end{solution}
-\protect \hypertarget {soln:21.2}{}
-\begin{solution}{{21.2}}
+\protect \hypertarget {soln:22.2}{}
+\begin{solution}{{22.2}}
   Проекцией вектора $(6, 3, 7, 8, 9, 10, 11)$; $a=6$, $b=5$, $c= 9$;
 \end{solution}
-\protect \hypertarget {soln:21.3}{}
-\begin{solution}{{21.3}}
+\protect \hypertarget {soln:22.3}{}
+\begin{solution}{{22.3}}
 \end{solution}
-\protect \hypertarget {soln:21.4}{}
-\begin{solution}{{21.4}}
+\protect \hypertarget {soln:22.4}{}
+\begin{solution}{{22.4}}
 \begin{enumerate}
 \item $\chi^2_d$
 \item $d$
@@ -932,24 +1011,24 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
 \item $\chi^2_{a+b}$
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:21.5}{}
-\begin{solution}{{21.5}}
+\protect \hypertarget {soln:22.5}{}
+\begin{solution}{{22.5}}
   $Q= Z_1^2$, зная функцию плотности $Z_1$, $f(z_1) = \frac{1}{\sqrt{2\pi}}\exp(-z_1^2/2)$, находим функцию плотности $Q$;
 \end{solution}
-\protect \hypertarget {soln:21.6}{}
-\begin{solution}{{21.6}}
+\protect \hypertarget {soln:22.6}{}
+\begin{solution}{{22.6}}
 \end{solution}
-\protect \hypertarget {soln:21.7}{}
-\begin{solution}{{21.7}}
+\protect \hypertarget {soln:22.7}{}
+\begin{solution}{{22.7}}
 \end{solution}
-\protect \hypertarget {soln:21.8}{}
-\begin{solution}{{21.8}}
+\protect \hypertarget {soln:22.8}{}
+\begin{solution}{{22.8}}
   $\hat Z = \langle Z, z\rangle \cdot v$;
 $\hat Z_i = \langle Z, z\rangle \cdot v_i$;
 $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z, z\rangle)= v_i v_j$;
 \end{solution}
-\protect \hypertarget {soln:22.1}{}
-\begin{solution}{{22.1}}
+\protect \hypertarget {soln:23.1}{}
+\begin{solution}{{23.1}}
   Метод максимального правдоподобия:
   \[
     C_n^{Y_{\text{к}}}C_{n-Y_{\text{к}}}^{Y_{\text{щ}}}a^{Y_{\text{к}}}(2a)^{Y_{\text{щ}}}(1-3a)^{Y_{\text{б}}} \to \max_a
@@ -964,8 +1043,8 @@ $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z
 С точки зрения Пса Шарика, неизвестными являются две вероятности, $a$ и $b$. Он решает задачу максимизации по двум переменным. В результате получается вполне себе интуитивная оценка $\hat a_{\text{ПШ}} = Y_{\text{к}}/n$.
 
 \end{solution}
-\protect \hypertarget {soln:22.2}{}
-\begin{solution}{{22.2}}
+\protect \hypertarget {soln:23.2}{}
+\begin{solution}{{23.2}}
 Метод правдоподобия: $\max_n \P(S=80)$. Замечаем, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$. Отсюда, $\hat n_{ML} = 125$.
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
@@ -979,24 +1058,6 @@ $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z
 \hat n_{MM} = \frac{100}{\bar Y} = \frac{100^2}{S}
 \]
 \end{solution}
-\protect \hypertarget {soln:22.3}{}
-\begin{solution}{{22.3}}
-\end{solution}
-\protect \hypertarget {soln:22.4}{}
-\begin{solution}{{22.4}}
-\end{solution}
-\protect \hypertarget {soln:22.5}{}
-\begin{solution}{{22.5}}
-\end{solution}
-\protect \hypertarget {soln:23.1}{}
-\begin{solution}{{23.1}}
-  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
-  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
-\end{solution}
-\protect \hypertarget {soln:23.2}{}
-\begin{solution}{{23.2}}
-$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
-\end{solution}
 \protect \hypertarget {soln:23.3}{}
 \begin{solution}{{23.3}}
 \end{solution}
@@ -1006,54 +1067,72 @@ $\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
 \protect \hypertarget {soln:23.5}{}
 \begin{solution}{{23.5}}
 \end{solution}
-\protect \hypertarget {soln:23.6}{}
-\begin{solution}{{23.6}}
+\protect \hypertarget {soln:24.1}{}
+\begin{solution}{{24.1}}
+  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
+  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
+\end{solution}
+\protect \hypertarget {soln:24.2}{}
+\begin{solution}{{24.2}}
+$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
+\end{solution}
+\protect \hypertarget {soln:24.3}{}
+\begin{solution}{{24.3}}
+\end{solution}
+\protect \hypertarget {soln:24.4}{}
+\begin{solution}{{24.4}}
+\end{solution}
+\protect \hypertarget {soln:24.5}{}
+\begin{solution}{{24.5}}
+\end{solution}
+\protect \hypertarget {soln:24.6}{}
+\begin{solution}{{24.6}}
 $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{solution}
-\protect \hypertarget {soln:23.7}{}
-\begin{solution}{{23.7}}
+\protect \hypertarget {soln:24.7}{}
+\begin{solution}{{24.7}}
 \end{solution}
-\protect \hypertarget {soln:23.8}{}
-\begin{solution}{{23.8}}
+\protect \hypertarget {soln:24.8}{}
+\begin{solution}{{24.8}}
 \end{solution}
-\protect \hypertarget {soln:23.9}{}
-\begin{solution}{{23.9}}
+\protect \hypertarget {soln:24.9}{}
+\begin{solution}{{24.9}}
 \end{solution}
-\protect \hypertarget {soln:23.10}{}
-\begin{solution}{{23.10}}
+\protect \hypertarget {soln:24.10}{}
+\begin{solution}{{24.10}}
 \end{solution}
-\protect \hypertarget {soln:23.11}{}
-\begin{solution}{{23.11}}
+\protect \hypertarget {soln:24.11}{}
+\begin{solution}{{24.11}}
 \end{solution}
-\protect \hypertarget {soln:23.12}{}
-\begin{solution}{{23.12}}
+\protect \hypertarget {soln:24.12}{}
+\begin{solution}{{24.12}}
 \end{solution}
-\protect \hypertarget {soln:23.13}{}
-\begin{solution}{{23.13}}
+\protect \hypertarget {soln:24.13}{}
+\begin{solution}{{24.13}}
 \end{solution}
-\protect \hypertarget {soln:23.14}{}
-\begin{solution}{{23.14}}
+\protect \hypertarget {soln:24.14}{}
+\begin{solution}{{24.14}}
 \end{solution}
-\protect \hypertarget {soln:23.15}{}
-\begin{solution}{{23.15}}
+\protect \hypertarget {soln:24.15}{}
+\begin{solution}{{24.15}}
 \end{solution}
-\protect \hypertarget {soln:23.16}{}
-\begin{solution}{{23.16}}
+\protect \hypertarget {soln:24.16}{}
+\begin{solution}{{24.16}}
 \end{solution}
-\protect \hypertarget {soln:23.17}{}
-\begin{solution}{{23.17}}
+\protect \hypertarget {soln:24.17}{}
+\begin{solution}{{24.17}}
 \end{solution}
-\protect \hypertarget {soln:23.18}{}
-\begin{solution}{{23.18}}
+\protect \hypertarget {soln:24.18}{}
+\begin{solution}{{24.18}}
 \end{solution}
-\protect \hypertarget {soln:23.19}{}
-\begin{solution}{{23.19}}
+\protect \hypertarget {soln:24.19}{}
+\begin{solution}{{24.19}}
 \end{solution}
-\protect \hypertarget {soln:23.20}{}
-\begin{solution}{{23.20}}
+\protect \hypertarget {soln:24.20}{}
+\begin{solution}{{24.20}}
 \end{solution}
-\protect \hypertarget {soln:23.21}{}
-\begin{solution}{{23.21}}
+\protect \hypertarget {soln:24.21}{}
+\begin{solution}{{24.21}}
 \begin{enumerate}
 \item $\E(X_i) = a$, $\E(|X_i|) = 5a/4$
 \item $\hat a = 11/30$
@@ -1065,19 +1144,19 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{pmatrix}$
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:23.22}{}
-\begin{solution}{{23.22}}
+\protect \hypertarget {soln:24.22}{}
+\begin{solution}{{24.22}}
 \end{solution}
-\protect \hypertarget {soln:23.23}{}
-\begin{solution}{{23.23}}
+\protect \hypertarget {soln:24.23}{}
+\begin{solution}{{24.23}}
   $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
 \end{solution}
-\protect \hypertarget {soln:23.24}{}
-\begin{solution}{{23.24}}
+\protect \hypertarget {soln:24.24}{}
+\begin{solution}{{24.24}}
 
 \end{solution}
-\protect \hypertarget {soln:24.1}{}
-\begin{solution}{{24.1}}
+\protect \hypertarget {soln:25.1}{}
+\begin{solution}{{25.1}}
     \begin{enumerate}
       \item $c=1/n$, да
       \item $c=1/(n+\sigma^2/\mu^2)$, нет, так как $\mu$ и $\sigma$ неизвестны
@@ -1085,8 +1164,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:24.2}{}
-\begin{solution}{{24.2}}
+\protect \hypertarget {soln:25.2}{}
+\begin{solution}{{25.2}}
     \begin{enumerate}
     \item несмещённая, состоятельная, линейная, неэффективная
     \item несмещённая, состоятельная, линейная, неэффективная
@@ -1101,8 +1180,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:24.3}{}
-\begin{solution}{{24.3}}
+\protect \hypertarget {soln:25.3}{}
+\begin{solution}{{25.3}}
 \begin{enumerate}
 \item $\hat\theta_{ML} = \max\{ Y_1, Y_2, \ldots, Y_n\}$.
 \item Все $Y_i$ меньше $\theta$, значит и $\hat\theta$ всегда меньше $\theta$, значит смещённая.
@@ -1111,218 +1190,218 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \item $\hat\theta_{unbiased} = \frac{5n+1}{5n}\hat\theta$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:24.4}{}
-\begin{solution}{{24.4}}
+\protect \hypertarget {soln:25.4}{}
+\begin{solution}{{25.4}}
 \begin{enumerate}
   \item $\hat p$ несмещённая
   \item $\sigma^2 = n p(1-p)$.
   \item $\E(\hat\sigma^2) = (n-1)p(1-p)$, смещённая, $\hat\sigma^2_{unbiased} = \frac{n}{n-1} \hat\sigma^2$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:24.5}{}
-\begin{solution}{{24.5}}
-
-\end{solution}
-\protect \hypertarget {soln:24.6}{}
-\begin{solution}{{24.6}}
-
-\end{solution}
-\protect \hypertarget {soln:24.7}{}
-\begin{solution}{{24.7}}
-
-\end{solution}
-\protect \hypertarget {soln:24.8}{}
-\begin{solution}{{24.8}}
-
-\end{solution}
-\protect \hypertarget {soln:24.9}{}
-\begin{solution}{{24.9}}
-
-\end{solution}
-\protect \hypertarget {soln:24.10}{}
-\begin{solution}{{24.10}}
-
-\end{solution}
-\protect \hypertarget {soln:24.11}{}
-\begin{solution}{{24.11}}
-
-\end{solution}
-\protect \hypertarget {soln:24.12}{}
-\begin{solution}{{24.12}}
-  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
-  $\hat\theta_{unbiased} = 20X$.
-\end{solution}
-\protect \hypertarget {soln:24.13}{}
-\begin{solution}{{24.13}}
-
-\end{solution}
-\protect \hypertarget {soln:24.14}{}
-\begin{solution}{{24.14}}
-Обе оценки несмещённые, состоятельные. Более эффективна $\hat{\beta}_{2}=\frac{\sum{x_{i}Y_{i}}}{\sum x_{i}^{2}}$.
-\end{solution}
-\protect \hypertarget {soln:24.15}{}
-\begin{solution}{{24.15}}
-
-\end{solution}
-\protect \hypertarget {soln:25.1}{}
-\begin{solution}{{25.1}}
-  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
-\end{solution}
-\protect \hypertarget {soln:25.2}{}
-\begin{solution}{{25.2}}
-\end{solution}
-\protect \hypertarget {soln:25.3}{}
-\begin{solution}{{25.3}}
-\end{solution}
-\protect \hypertarget {soln:25.4}{}
-\begin{solution}{{25.4}}
-\end{solution}
 \protect \hypertarget {soln:25.5}{}
 \begin{solution}{{25.5}}
+
 \end{solution}
 \protect \hypertarget {soln:25.6}{}
 \begin{solution}{{25.6}}
-Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
+
 \end{solution}
 \protect \hypertarget {soln:25.7}{}
 \begin{solution}{{25.7}}
+
+\end{solution}
+\protect \hypertarget {soln:25.8}{}
+\begin{solution}{{25.8}}
+
+\end{solution}
+\protect \hypertarget {soln:25.9}{}
+\begin{solution}{{25.9}}
+
+\end{solution}
+\protect \hypertarget {soln:25.10}{}
+\begin{solution}{{25.10}}
+
+\end{solution}
+\protect \hypertarget {soln:25.11}{}
+\begin{solution}{{25.11}}
+
+\end{solution}
+\protect \hypertarget {soln:25.12}{}
+\begin{solution}{{25.12}}
+  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
+  $\hat\theta_{unbiased} = 20X$.
+\end{solution}
+\protect \hypertarget {soln:25.13}{}
+\begin{solution}{{25.13}}
+
+\end{solution}
+\protect \hypertarget {soln:25.14}{}
+\begin{solution}{{25.14}}
+Обе оценки несмещённые, состоятельные. Более эффективна $\hat{\beta}_{2}=\frac{\sum{x_{i}Y_{i}}}{\sum x_{i}^{2}}$.
+\end{solution}
+\protect \hypertarget {soln:25.15}{}
+\begin{solution}{{25.15}}
+
 \end{solution}
 \protect \hypertarget {soln:26.1}{}
 \begin{solution}{{26.1}}
-к 1/2
+  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
 \end{solution}
 \protect \hypertarget {soln:26.2}{}
 \begin{solution}{{26.2}}
-  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
 \end{solution}
 \protect \hypertarget {soln:26.3}{}
 \begin{solution}{{26.3}}
-  $\alpha = 1/8$, $\beta = 9/32$
 \end{solution}
 \protect \hypertarget {soln:26.4}{}
 \begin{solution}{{26.4}}
-  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
 \end{solution}
 \protect \hypertarget {soln:26.5}{}
 \begin{solution}{{26.5}}
 \end{solution}
 \protect \hypertarget {soln:26.6}{}
 \begin{solution}{{26.6}}
+Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
 \end{solution}
 \protect \hypertarget {soln:26.7}{}
 \begin{solution}{{26.7}}
+\end{solution}
+\protect \hypertarget {soln:27.1}{}
+\begin{solution}{{27.1}}
+к 1/2
+\end{solution}
+\protect \hypertarget {soln:27.2}{}
+\begin{solution}{{27.2}}
+  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
+\end{solution}
+\protect \hypertarget {soln:27.3}{}
+\begin{solution}{{27.3}}
+  $\alpha = 1/8$, $\beta = 9/32$
+\end{solution}
+\protect \hypertarget {soln:27.4}{}
+\begin{solution}{{27.4}}
+  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
+\end{solution}
+\protect \hypertarget {soln:27.5}{}
+\begin{solution}{{27.5}}
+\end{solution}
+\protect \hypertarget {soln:27.6}{}
+\begin{solution}{{27.6}}
+\end{solution}
+\protect \hypertarget {soln:27.7}{}
+\begin{solution}{{27.7}}
 
 \end{solution}
-\protect \hypertarget {soln:26.8}{}
-\begin{solution}{{26.8}}
+\protect \hypertarget {soln:27.8}{}
+\begin{solution}{{27.8}}
 Критерий Неймана-Пирсона сводится к сравнению $\bar X$ с порогом. При верной $H_0$ величина $\bar X$ распределена $\cN(0; \frac{4}{n})$.
 Отсюда искомый критерий имеет вид:
 Если $\bar X  \geqslant 0.825$, то гипотеза ${H_0}$ отвергается в пользу гипотезы ${H_a}$.
 \end{solution}
-\protect \hypertarget {soln:26.9}{}
-\begin{solution}{{26.9}}
+\protect \hypertarget {soln:27.9}{}
+\begin{solution}{{27.9}}
   Упрощая неравенство из леммы Неймана-Пирсона, получаем критерий: если $X_1\cdot X_2 >t$, то $H_0$ отвергается. Величину $t$ находим из уравнения
 \[
 \int_0^t (1 - t/x) \, dx = 0.05
 \]
 \end{solution}
-\protect \hypertarget {soln:26.10}{}
-\begin{solution}{{26.10}}
+\protect \hypertarget {soln:27.10}{}
+\begin{solution}{{27.10}}
 
 \end{solution}
-\protect \hypertarget {soln:26.11}{}
-\begin{solution}{{26.11}}
+\protect \hypertarget {soln:27.11}{}
+\begin{solution}{{27.11}}
 \end{solution}
-\protect \hypertarget {soln:27.1}{}
-\begin{solution}{{27.1}}
+\protect \hypertarget {soln:28.1}{}
+\begin{solution}{{28.1}}
 При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
 При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
 
 \url{https://ru.wikipedia.org/wiki/Закон_Харди_—_Вайнберга}
   
 \end{solution}
-\protect \hypertarget {soln:28.1}{}
-\begin{solution}{{28.1}}
-$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
-\end{solution}
-\protect \hypertarget {soln:28.2}{}
-\begin{solution}{{28.2}}
-
-\end{solution}
-\protect \hypertarget {soln:28.3}{}
-\begin{solution}{{28.3}}
-
-\end{solution}
-\protect \hypertarget {soln:28.4}{}
-\begin{solution}{{28.4}}
-
-\end{solution}
-\protect \hypertarget {soln:28.5}{}
-\begin{solution}{{28.5}}
-
-\end{solution}
-\protect \hypertarget {soln:28.6}{}
-\begin{solution}{{28.6}}
-
-\end{solution}
 \protect \hypertarget {soln:29.1}{}
 \begin{solution}{{29.1}}
-Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
+$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:29.2}{}
 \begin{solution}{{29.2}}
+
 \end{solution}
 \protect \hypertarget {soln:29.3}{}
 \begin{solution}{{29.3}}
+
 \end{solution}
 \protect \hypertarget {soln:29.4}{}
 \begin{solution}{{29.4}}
+
 \end{solution}
 \protect \hypertarget {soln:29.5}{}
 \begin{solution}{{29.5}}
-$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
+
 \end{solution}
 \protect \hypertarget {soln:29.6}{}
 \begin{solution}{{29.6}}
+
 \end{solution}
 \protect \hypertarget {soln:30.1}{}
 \begin{solution}{{30.1}}
-  
+Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
 \end{solution}
 \protect \hypertarget {soln:30.2}{}
 \begin{solution}{{30.2}}
-  
 \end{solution}
 \protect \hypertarget {soln:30.3}{}
 \begin{solution}{{30.3}}
-  
+\end{solution}
+\protect \hypertarget {soln:30.4}{}
+\begin{solution}{{30.4}}
+\end{solution}
+\protect \hypertarget {soln:30.5}{}
+\begin{solution}{{30.5}}
+$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
+\end{solution}
+\protect \hypertarget {soln:30.6}{}
+\begin{solution}{{30.6}}
 \end{solution}
 \protect \hypertarget {soln:31.1}{}
 \begin{solution}{{31.1}}
-$C_{20}^2\cdot 18$.
+  
 \end{solution}
 \protect \hypertarget {soln:31.2}{}
 \begin{solution}{{31.2}}
+  
+\end{solution}
+\protect \hypertarget {soln:31.3}{}
+\begin{solution}{{31.3}}
+  
+\end{solution}
+\protect \hypertarget {soln:32.1}{}
+\begin{solution}{{32.1}}
+$C_{20}^2\cdot 18$.
+\end{solution}
+\protect \hypertarget {soln:32.2}{}
+\begin{solution}{{32.2}}
   $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
   $1+x+x^2+x^3+\ldots = 1/(1-x)$
   $(1+x)^4$
 \end{solution}
-\protect \hypertarget {soln:31.3}{}
-\begin{solution}{{31.3}}
+\protect \hypertarget {soln:32.3}{}
+\begin{solution}{{32.3}}
 \end{solution}
-\protect \hypertarget {soln:31.4}{}
-\begin{solution}{{31.4}}
+\protect \hypertarget {soln:32.4}{}
+\begin{solution}{{32.4}}
 \end{solution}
-\protect \hypertarget {soln:31.5}{}
-\begin{solution}{{31.5}}
+\protect \hypertarget {soln:32.5}{}
+\begin{solution}{{32.5}}
   0 с вероятностью 1/4 и 1 с вероятностью 3/4
 \end{solution}
-\protect \hypertarget {soln:31.6}{}
-\begin{solution}{{31.6}}
+\protect \hypertarget {soln:32.6}{}
+\begin{solution}{{32.6}}
   да, сможет!
 \end{solution}
-\protect \hypertarget {soln:31.7}{}
-\begin{solution}{{31.7}}
+\protect \hypertarget {soln:32.7}{}
+\begin{solution}{{32.7}}
 $F_n = F_{n-1} + F_{n-2}$.
 Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
 
@@ -1334,36 +1413,36 @@ g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
 \]
 где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
 \end{solution}
-\protect \hypertarget {soln:31.8}{}
-\begin{solution}{{31.8}}
+\protect \hypertarget {soln:32.8}{}
+\begin{solution}{{32.8}}
 Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
 \[
 h_1(t) = 0.7t + 0.3th^2_1(t)
 \]
 \end{solution}
-\protect \hypertarget {soln:31.9}{}
-\begin{solution}{{31.9}}
+\protect \hypertarget {soln:32.9}{}
+\begin{solution}{{32.9}}
 
-\end{solution}
-\protect \hypertarget {soln:32.1}{}
-\begin{solution}{{32.1}}
-\end{solution}
-\protect \hypertarget {soln:32.2}{}
-\begin{solution}{{32.2}}
 \end{solution}
 \protect \hypertarget {soln:33.1}{}
 \begin{solution}{{33.1}}
-  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
 \protect \hypertarget {soln:33.2}{}
 \begin{solution}{{33.2}}
 \end{solution}
-\protect \hypertarget {soln:33.3}{}
-\begin{solution}{{33.3}}
+\protect \hypertarget {soln:34.1}{}
+\begin{solution}{{34.1}}
+  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
-\protect \hypertarget {soln:33.4}{}
-\begin{solution}{{33.4}}
+\protect \hypertarget {soln:34.2}{}
+\begin{solution}{{34.2}}
 \end{solution}
-\protect \hypertarget {soln:33.5}{}
-\begin{solution}{{33.5}}
+\protect \hypertarget {soln:34.3}{}
+\begin{solution}{{34.3}}
+\end{solution}
+\protect \hypertarget {soln:34.4}{}
+\begin{solution}{{34.4}}
+\end{solution}
+\protect \hypertarget {soln:34.5}{}
+\begin{solution}{{34.5}}
 \end{solution}
